agrego validaciones para registro de ingreso

--- a/SAT-PRACO-spring/nbproject/project.properties
+++ b/SAT-PRACO-spring/nbproject/project.properties
@@ -28,8 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.gson-2.6.2.jar=gson-2.6.2.jar
-file.reference.sqljdbc41__1_.jar=sqljdbc41 (1).jar
+file.reference.gson-2.6.2.jar=C:\\Users\\SARA\\Desktop\\PROYECTOS IDAT\\SAT-PRACO-spring\\gson-2.6.2.jar
+file.reference.sqljdbc41__1_.jar=C:\\Users\\SARA\\Desktop\\PROYECTOS IDAT\\SAT-PRACO-spring\\sqljdbc41 (1).jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
