--- a/SAT-PRACO-spring/nbproject/project.properties
+++ b/SAT-PRACO-spring/nbproject/project.properties
@@ -29,7 +29,9 @@ endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
 file.reference.gson-2.6.2.jar=C:\\Users\\SARA\\Desktop\\PROYECTOS IDAT\\SAT-PRACO-spring\\gson-2.6.2.jar
+file.reference.gson-2.6.2.jar-1=gson-2.6.2.jar
 file.reference.sqljdbc41__1_.jar=C:\\Users\\SARA\\Desktop\\PROYECTOS IDAT\\SAT-PRACO-spring\\sqljdbc41 (1).jar
+file.reference.sqljdbc41__1_.jar-1=sqljdbc41 (1).jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -47,7 +49,9 @@ javac.classpath=\
     ${libs.spring-framework400.classpath}:\
     ${libs.jstl.classpath}:\
     ${file.reference.sqljdbc41__1_.jar}:\
-    ${file.reference.gson-2.6.2.jar}
+    ${file.reference.gson-2.6.2.jar}:\
+    ${file.reference.sqljdbc41__1_.jar-1}:\
+    ${file.reference.gson-2.6.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
