--- a/SAT-PRACO-spring/nbproject/project.properties
+++ b/SAT-PRACO-spring/nbproject/project.properties
@@ -3,6 +3,13 @@ annotation.processing.enabled.in.editor=true
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
 build.classes.dir=${build.web.dir}/WEB-INF/classes
 build.classes.excludes=**/*.java,**/*.form
 build.dir=build
@@ -28,7 +35,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.gson-2.6.2.jar=C:\\Users\\SARA\\Desktop\\PROYECTOS IDAT\\SAT-PRACO-v2\\gson-2.6.2.jar
 file.reference.gson-2.6.2.jar-1=gson-2.6.2.jar
+file.reference.sqljdbc41__1_.jar=C:\\Users\\SARA\\Desktop\\PROYECTOS IDAT\\SAT-PRACO-v2\\sqljdbc41 (1).jar
 file.reference.sqljdbc41__1_.jar-1=sqljdbc41 (1).jar
 includes=**
 j2ee.compile.on.save=true
@@ -46,8 +55,10 @@ jar.compress=false
 javac.classpath=\
     ${libs.spring-framework400.classpath}:\
     ${libs.jstl.classpath}:\
-    ${file.reference.sqljdbc41__1_.jar-1}:\
-    ${file.reference.gson-2.6.2.jar-1}
+    ${file.reference.sqljdbc41__1_.jar}:\
+    ${file.reference.gson-2.6.2.jar}:\
+    ${file.reference.gson-2.6.2.jar-1}:\
+    ${file.reference.sqljdbc41__1_.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
