--- a/SAT-PRACO-spring/nbproject/private/private.properties
+++ b/SAT-PRACO-spring/nbproject/private/private.properties
@@ -1,12 +1,10 @@
-deploy.ant.properties.file=C:\\Users\\SARA\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3-1759011060.properties
-file.reference.gson-2.6.2.jar=C:\\Users\\SARA\\Desktop\\PROYECTOS-IDAT\\SAT-PRACO-java\\SAT-PRACO-spring\\gson-2.6.2.jar
-file.reference.sqljdbc41__1_.jar=C:\\Users\\SARA\\Desktop\\PROYECTOS-IDAT\\SAT-PRACO-java\\SAT-PRACO-spring\\sqljdbc41 (1).jar
+deploy.ant.properties.file=C:\\Users\\Administrador\\AppData\\Roaming\\NetBeans\\8.2\\config\\GlassFishEE6\\Properties\\gfv3910414904.properties
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/SARA/glassfish4/glassfish/domains/domain1
-j2ee.server.home=C:/Users/SARA/glassfish4/glassfish
-j2ee.server.instance=[C:\\Users\\SARA\\glassfish4\\glassfish;C:\\Users\\SARA\\glassfish4\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Users/SARA/glassfish4
+j2ee.server.domain=C:/Program Files/glassfish-4.1.1/glassfish/domains/domain1
+j2ee.server.home=C:/Program Files/glassfish-4.1.1/glassfish
+j2ee.server.instance=[C:\\Program Files\\glassfish-4.1.1\\glassfish;C:\\Program Files\\glassfish-4.1.1\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=C:/Program Files/glassfish-4.1.1
 javac.debug=true
 javadoc.preview=true
 selected.browser=Chrome
-user.properties.file=C:\\Users\\SARA\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
+user.properties.file=C:\\Users\\Administrador\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
