--- a/SAT-PRACO-spring/nbproject/project.properties
+++ b/SAT-PRACO-spring/nbproject/project.properties
@@ -35,10 +35,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
-file.reference.gson-2.6.2.jar=C:\\Users\\SARA\\Desktop\\PROYECTOS IDAT\\SAT-PRACO-v2\\gson-2.6.2.jar
-file.reference.gson-2.6.2.jar-1=gson-2.6.2.jar
-file.reference.sqljdbc41__1_.jar=C:\\Users\\SARA\\Desktop\\PROYECTOS IDAT\\SAT-PRACO-v2\\sqljdbc41 (1).jar
-file.reference.sqljdbc41__1_.jar-1=sqljdbc41 (1).jar
+file.reference.gson-2.6.2.jar=gson-2.6.2.jar
+file.reference.sqljdbc41__1_.jar=sqljdbc41 (1).jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -56,9 +54,7 @@ javac.classpath=\
     ${libs.spring-framework400.classpath}:\
     ${libs.jstl.classpath}:\
     ${file.reference.sqljdbc41__1_.jar}:\
-    ${file.reference.gson-2.6.2.jar}:\
-    ${file.reference.gson-2.6.2.jar-1}:\
-    ${file.reference.sqljdbc41__1_.jar-1}
+    ${file.reference.gson-2.6.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -80,6 +76,8 @@ javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.preview=true
 javadoc.private=false
+javadoc.reference.gson-2.6.2.jar=gson-2.6.2.jar
+javadoc.reference.sqljdbc41__1_.jar=sqljdbc41 (1).jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
